Bug 1815391 - Pass system locale language when setting up fonts for an offscreen canvas. r=gfx-reviewers,lsalzman

This helps the offscreen-canvas measurements done by pdf.js to more closely match the
invisible text layer (used for search/selection/etc) in cases where the host system
locale is non-English and has different generic font prefs (e.g. Japanese).

(Not readily testable in CI because it'll only make a visible difference to behavior
when running with a system locale that has different font prefs.)

Differential Revision: https://phabricator.services.mozilla.com/D169136